# streams-charts-weekly-pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  metadata.yaml  pyproject.toml  railway.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test-pipeline.yaml  weekly-pipeline.yml
dags/: data_ingestion_dag.py
data/: sample_data.csv
data_exporters/: export_to_md.py
data_loaders/: load_streamer_data.py
infrastructure/: main.tf
pipelines/weekly_streamer_stats/: __init__.py  metadata.yaml  triggers.yaml
scripts/: config.py  data_ingestion.py  db_operations.py  exploration.ipynb  local_duckdb_queries.py  local_init_db_.py  pyspark_explode_ingestion.py  pyspark_raw_ingestion.py  setup.py  streams_charts_weekly_2024_45.csv  streams_charts_weekly_2024_46.csv  test_utils.py  weekly_streamer_data.json  weekly_streamer_test
tests/: conftest.py
tests/integration/: test_data_exporter.py  test_streamer_api_integration.py
tests/unit/test_data_loaders/: test_load_streamer_data.py  test_streamer_api.py
tests/unit/test_exporters/: test_export_to_md.py
tests/unit/test_transformers/: test_transform_streamer_data.py
transformers/: transform_streamer_data.py
